--- a/05-decriptives.Rmd
+++ b/05-decriptives.Rmd
@@ -9,7 +9,7 @@
 
 Если вдруг так вышло, что наши собранные данные представляют собой всю генеральную совокупность, то нам даже не нужно заниматься статистикой вывоода -- мы можем сделать какие-то выводы об этих данных уже из эмпирически собранных данных (например, сравнить успеваемость в классе A и Б всего одной школы)
 
-## Описательные визуализации
+## Описательные визуализации {#descriptive_vis}
 
 Мы уже обсуждали два важных графика -- гистограмму и график плотности вероятности -- когда говорили про распределения. Эти графики стоит строить каждый раз, когда мы хотим поисследовать эмпирически полученные данные методами описательной статистики. Такого термина, кажется, официально не существует, но я называю эти графики также описательными.
 
