--- a/07-inference.Rmd
+++ b/07-inference.Rmd
@@ -380,13 +380,13 @@ knitr::include_graphics("docs/images/pvalue_dist_2.png")
 $\mu$ = 14, M = 15, n = 100, sd = 4.5
 
 Сформулириуем нулевую и альтернативные гипотезы. Нулевая гипотеза -- всегда гипотеза об отсутствии различий, то есть, что среднее время, которое проводят родители с детьми в неделю, не отличается в больших и маленьких городах.
-$H_0$: $M_{большие} = M_{маленькие}$ 
-$H_1$: $M_{большие} \neq M_{маленькие}$ 
+$H_0$: $\mu_{большие} = \mu_{маленькие}$ 
+$H_1$: $\mu_{большие} \neq \mu_{маленькие}$ 
 
 Далее мы начинаем проверять наше нулевое предположение, будем пытаться опровергнуть нулевую гипотезу.
 
 Итак, предполагаем, что нулевая гипотеза верна. 
-Далее, если мы исходим из того, что она верна, то $M_{большие}$ и $M_{маленькие}$ будут в одной точке. Так как речь идет про два средних разных выборок, то нам нужно распределение выборочных средних, на котором мы и сможем разместить $M_{большие}$ и $M_{маленькие}$.  
+Далее, если мы исходим из того, что она верна, то $\mu_{большие}$ и $\mu_{маленькие}$ будут в одной точке. Так как речь идет про два средних разных выборок, то нам нужно распределение выборочных средних, на котором мы и сможем разместить $\mu_{большие}$ и $\mu_{маленькие}$.  
 
 <p align="center"> 
 ```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="80%"}
@@ -394,19 +394,19 @@ knitr::include_graphics("docs/images/means_dist.png")
 ```
 </p>
 
-Далее, нам нужно как-то оценить, насколько $M_{маленькие}$ удалено от $M_{большие}$. Что мы делаем всегда, когда нам нужно сравнить, какое из значений, взятых из разных выборок, больше или меньше другого? Переходим к стандартному нормальному распределению -- распределению Z-оценок! 
+Далее, нам нужно как-то оценить, насколько $\mu_{маленькие}$ удалено от $\mu_{большие}$. Что мы делаем всегда, когда нам нужно сравнить, какое из значений, взятых из разных выборок, больше или меньше другого? Переходим к стандартному нормальному распределению -- распределению Z-оценок! 
 $Z = \frac{X - \bar X}{sd}$
 
 Причем стандартным отклонением этого распределения будет [стандартная ошибка среднего](standart_error) -- величина стандартного отклонения для распределения выборочных средних.
 
-Возьмем за середину распределения $M_{большие}$ (произвольно, можем взять любое из средних). Чтобы перевести $M_{маленькие}$ в Z-оценку, сначала посчитаем стандартную ошибку среднего $\mathrm{se} = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}}$.
+Возьмем за середину распределения $\mu_{большие}$ (произвольно, можем взять любое из средних). Чтобы перевести $\mu_{маленькие}$ в Z-оценку, сначала посчитаем стандартную ошибку среднего $\mathrm{se} = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}}$.
 $se = \frac{4.5}{\sqrt{10}} = 0.45$ *(мы уже считали ее для расчета доверительного интервала -- математика этих процессов почти идентична!)*
 
-$Z_{Mмаленькие} = \frac{M_{маленькие} - M_{большие}}{se}$.
+$Z_{Mмаленькие} = \frac{\mu_{маленькие} - \mu_{большие}}{se}$.
 
 $Z_{Mмаленькие} = \frac{15-14}{0.45} = 2.2$
 
-Теперь мы можем расположить $M_{маленькие}$ на Z-распределении с серединой в $M_{большие}$ и посмотреть, насколько сильно они получилиьсь далеко друг от друга.
+Теперь мы можем расположить $\mu_{маленькие}$ на Z-распределении с серединой в $\mu_{большие}$ и посмотреть, насколько сильно они получилиьсь далеко друг от друга.
 
 <p align="center"> 
 ```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="80%"}
@@ -414,9 +414,9 @@ knitr::include_graphics("docs/images/z_dist.png")
 ```
 </p>
 
-Мы знаем, что числу 2 на распределении Z-оценок соответствует примерно 96% данных (мы знаем распределение данных для любого нормального распределения). И вспомним, что мы строили это распределение исходя из предположения равенства нулевой гипотезы, что $M_{большие} = M_{маленькие}$. Как тогда мы можем проинтерпретировать полученные оценки?
+Мы знаем, что числу 2 на распределении Z-оценок соответствует примерно 96% данных (мы знаем распределение данных для любого нормального распределения). И вспомним, что мы строили это распределение исходя из предположения равенства нулевой гипотезы, что $\mu_{большие} = \mu_{маленькие}$. Как тогда мы можем проинтерпретировать полученные оценки?
 
-Получилось, что вероятность получить значение $M_{маленькие} = 15 $ или еще более далекое от от $M_{большие}= 14$  при верности предположения что $M_{большие} = M_{маленькие}$ составляет $P(M_{маленькие} | M_{большие} = M_{маленькие}) = 1 - 0.96 = 0.04$. **Это и есть наше p-value**, целевая статистика, которую мы стремимся получить.
+Получилось, что вероятность получить значение $\mu_{маленькие} = 15 $ или еще более далекое от от $\mu_{большие}= 14$  при верности предположения что $\mu_{большие} = \mu_{маленькие}$ составляет $P(M_{маленькие} | \mu_{большие} = \mu_{маленькие}) = 1 - 0.96 = 0.04$. **Это и есть наше p-value**, целевая статистика, которую мы стремимся получить.
 
 В интерпретации p-value много путаницы, чтобы распутаться, можно почитать эти статьи:
 
