--- a/08-stats_criteria.Rmd
+++ b/08-stats_criteria.Rmd
@@ -134,7 +134,7 @@ $P(x) = \frac{e^{-(x - \mu)^{2}/(2\sigma^{2}) }} {\sigma\sqrt{2\pi}}$
 
 Итак, я бы не рекомендовала делать тщательную проверку на нормальность вроде теста Колмогорова-Смирноова или Шапиро-Улика (хотя можно их считать, это не возбраняется), а оценить принадлежность к параметрическому (в данном случае нормальному) распределению следующим образом:
 
-1. График плотности вероятности или гистограмма: симметричность и эксцесс
+1. График плотности вероятности или гистограмма: симметричность и эксцесс [обсуждали их тут](#descriptive_vis)
 2. QQ-plot
 
 <p align="center"> 
@@ -158,6 +158,13 @@ knitr::include_graphics("docs/images/samples.png")
 Первым из статистических критериев мы рассмотрим один из самых простых вариантов -- т-тест.
 
 Это статистический критерий, распределение которого относится к семейству Т-распределений -- очень похоже на нормальное, но с более приподнятыми хвостами. Используется для сравнения средних двух групп, измеренных в метрической (количественной) шкале. Для остальных шкал т-тест не подходит *(хотя признаки, измеренные по шкале Лайкерта, например, по шкале от 1 до 5, иногда могут приписываться к количественным ихмерениям, но в рамках этого курса мы не будем это затрагивать)*
+
+Нулевая и альтернативная гипотезы:
+
+
+<p align="center">$H_0$: $\mu_1 = \mu_2$ </p>
+<p align="center">$H_1$: $\mu_1 \neq \mu_2$ </p>
+
 
 Вернемся к данным про студентов и нашим вопросам
 
@@ -249,5 +256,123 @@ students_2 %>%
 
 ## ANOVA (дисперсионный анализ)
 
+Хорошую главу (даже две) про ANOVA написал мой друг и коллега Антон Ангельгардт, почитайте для закрепления.
 https://angelgardt.github.io/SFDA2022/book/oneway-anova.html
+
+
+**ANOVA (ANalysis Of VAriance)** -- статистический критерий, распределение и ключевая статистика которого относятся к семейству F-распределений. Это то чуть скошенное влево распределение, уже сильно отличающееся от нормального. На этом распределении мы (точнее специально обученные программы) будут располагать F-значение, которое будет вычисляться (и это не имеет ничего общего с тем, как распределены переменные -- к ним все еще действует допущение о нормальности или большог ообъема выборки). Этот критерий используется, когда зависимая переменная (ЗП) измерена в метрической (количественной) шкале. Независимые переменные (НП) могут бытькатегориальными, но ЗП всегда количественная, иначе чуда не произойдет.
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="70%"}
+knitr::include_graphics("docs/images/F-dist.png")
+```
+</p>
+
+ANOVA используется тогда, когда число сравнений, которые нам нужно сделать, становится больше двух. Можно сделать и два сравнения с помощью ANOVA, но это будет бессмысленно, так как по сути это старый добрый т-тест. 
+
+Нулевая и альтернативные гипотеза для ANOVA:
+
+<p align="center">$H_0$: $\mu_1 = \mu_2 = ... =\mu_n$ </p>
+<p align="center">$H_1$: $\mu_1 \neq \mu_2 \neq ... \neq \mu_n$ </p>
+
+
+Как получается, что нам нужно сделать больше двух сравнений?
+
+### Факторы и уровни
+
+**Фактором** в линейных моделях и дисперсионном анализе называется независимая переменная. 
+
+Как правило, мы применяем ANOVA для сравнения групп, поэтому эта независимая переменная -- категориальная, она принимает конечное число значений. Значений НП -- это те группы, которые мы сравниваем между собой, они называются **уровнями НП или уровнями фактора**. 
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="70%"}
+knitr::include_graphics("docs/images/levels.png")
+```
+</p>
+
+В зависимости от числа НП и уровней НП можно конкретизировать экспериментальный план и план для ANOVA
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
+knitr::include_graphics("docs/images/factors_levels.png")
+```
+</p>
+
+
+### Почему он дисперсионный
+
+
+Чтобы перейти к анализу, надо немного разобраться, что это воообще за метод, и почему он называется анализом дисперсий, хотя сравниваются тут, как и в большинстве статистических критериев, средние значения по группам. Дело в том, что этот метод действительно учитывает дисперсию (хоть и не сравнивает ее между группами в качестве ключевого сравнения). Всю дисперсию можно разделить на межгрупповую и внутригрупповую. Если окажеется, что дисперсия между группами больше, чем внутри, то можно сделать вывод в пользу различий между группами.
+
+В качесте дисперсии для математики ANOVA обычно берется только числитель, без деления на число элементов в группе ([а саму дисперсию мы считали здесь](#varm). 
+
+Общая сумма квадратов складывается из межгрупповой суммы квадратов (SSE, Sum of Squares Explained или SSB, Sum of Squares Between groups) и внутригрупповой (SSR, Sum of Squares Random или SSW, Sum of Squares Within groups)
+
+<p align="center">$SST = SSE + SSR$</p>
+
+Предположим, что у нас есть m групп по n наблюдений в каждой из них (для простоты возьмем равные по численности группы).
+Тогда общая сумма квадратов (дисперсия без знаменателя) равна:
+
+<p align="center">$SST = \sum_{i=1}^{m \times n} (x_i - \bar x)^2$</p>
+<p align="center">$df_{SST} = m \times n-1$, m * n -- количество всех элементов во всех группах </p>
+
+Как вычислить межгрупповую и внутригрупповую сумму квадратов?
+
+<p align="center">$SSE = \sum_{j=1}^m (\bar x_j - \bar x)^2$</p>
+<p align="center">$df_{SSE} = m-1$, m -- количество групп </p>
+
+<p align="center">$SSR = \sum_{j=1}^m\sum_{i=1}^n (x_i - \bar x_j)^2$</p>
+<p align="center">$df_{SSR} = k-1$, n -- количество элементов во группе, m -- число групп </p>
+
+### Допущения для ANOVA
+
+Пройдем по алгоритму выбора статистического теста: <https://miro.com/app/board/uXjVOxmKhr8=/?share_link_id=245423331470>
+
+Помимо основных отраженных ответвлений, для каждого критерия существует ряд допущений.
+
+Допущения (assumptions) -- это утверждения про  характер наших данных, без соблюдения которых параметрические тесты будут работать некорректно (поэтому их никто и не любит).
+
+1. Данные распределены нормально (или, если измеряемый признак является случайной велиичной, в группах больше 30 наблюдений) 
+2. Дисперсии однородны (гомогенны) -- проверяется с помощью теста Левеня (Levene's Test of Homogeneity of Variance).
+
+### Непараметрические аналоги
+
+В случае, если допущения нормальности (помним, что это скорее про большое число наблюдений в выборке и визуально значительное отличие от гауссианы) и однородности дисперсий нарушаются, мы не можем использовать ANOVA, и нужно использовать непараметрические аналоги . 
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="70%"}
+knitr::include_graphics("docs/images/anova-tests.png")
+```
+</p>
+
+### Просто ANOVA и с повторными измерениями
+
+Тут тоже все довольно просто:
+
+* Если у нас независимые выборки, то мы используем ANOVA или его непараметрический аналог -- тест  Краскелла-Уоллиса.
+* Если выборки зависимые, то мы используем ANOVA c повторными измерениями (repeated measures) или его непараметрический аналог -- тест Фридмана.
+
+Обилие наименований может быть пугающим, но по сути, это один и тот же тест с небольшими поправками -- просто в разных названиях увековечено больше статистиков!
+
+
+### Взимодействие факторов
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="80%"}
+knitr::include_graphics("docs/images/anova_factors.png")
+```
+</p>
+
+### Пост-хоки и множественные сравнения
+
+### Вычисление ANOVA и непараметрических аналогов
+
+Посмотрим опять на данные и поисследуем зависимость балла по математике от того, живут ли студенты в городах (переменная `address` значение U (urban)) или деревнях (переменная `address` значение R).
+
+```{r eval=TRUE, echo = FALSE, message = FALSE}
+kable(students[1:10,]) %>% scroll_box(width = "100%") 
+```
+
+Первый вопроос мы подробно разбирали в прошлый раз. Сейчас остановимся на третьем, который уже затрагивали.
+
 
