--- a/07-inference.Rmd
+++ b/07-inference.Rmd
@@ -430,7 +430,7 @@ $p-value = 0.04 < \alpha = 0.05$.
 
 В этом случае, если p-value получилось меньше альфы, то мы можем сказать, что **вероятность получить такие или еще более сильные различия между средними достаточно при условии верности нулевой гипотезы статистически значимо мала, поэтому мы можем отвергнуть нулевую гипотезу об отсутствии различий и принять альтернативную гипотезу о том, что различия есть**
 
-Величина p-value связана [мы уже обсуждали это выше](sample_size):
+Величина p-value связана [мы уже обсуждали это выше](#sample_size):
 
 * Размером выборки: чем больше объем выборки, тем больше статистическая мощность и тем чаще и увереннее будут появляться p-value < 0.05
 * Размером эффекта: чем больше размер эффекта, тем ниже будет p-value 
